--- a/add-pattern/add-tasks/index.html
+++ b/add-pattern/add-tasks/index.html
@@ -37,14 +37,45 @@
 </header>
 <h1 class="visually-hidden">add tasks module 6</h1>
 <main>
-    <h2>Task 1</h2>
-    <div class="wrapper-task1">
-
-    </div>
-    <h2>Task 2</h2>
-    <div class="wrapper-task2">
-
-    </div>
+    <header>
+        <ul class="banner__list">
+            <li class="banner__item">
+                <div class="banner"><img src="#" alt="bunner">
+                    <p>Lorem ipsum dolor.</p>
+                </div>
+            </li>
+            <li class="banner__item">
+                <div class="banner"><img src="#" alt="bunner">
+                    <p>Lorem ipsum dolor.</p>
+                </div>
+            </li>
+            <li class="banner__item">
+                <div class="banner"><img src="#" alt="bunner">
+                    <p>Lorem ipsum dolor.</p>
+                </div>
+            </li>
+            <li class="banner__item">
+                <div class="banner"><img src="#" alt="bunner">
+                    <p>Lorem ipsum dolor.</p>
+                </div>
+            </li>
+            <li class="banner__item">
+                <div class="banner"><img src="#" alt="bunner">
+                    <p>Lorem ipsum dolor.</p>
+                </div>
+            </li>
+            <li class="banner__item">
+                <div class="banner"><img src="#" alt="bunner">
+                    <p>Lorem ipsum dolor.</p>
+                </div>
+            </li>
+            <li class="banner__item">
+                <div class="banner"><img src="#" alt="bunner">
+                    <p>Lorem ipsum dolor.</p>
+                </div>
+            </li>
+        </ul>
+    </header>
 </main>
 <a href="../../../index.html" class="back-button">LT</a>
 <a href="https://codepen.io/LTars/pen/" class="cpen-button">Pen</a>
