--- a/html-css/module-8/index.html
+++ b/html-css/module-8/index.html
@@ -16,43 +16,67 @@
     <h1 class="visually-hidden">Home page</h1>
     <nav class="nav-bar">
         <ul class="nav-list">
-            <li><a href="#">Log in</a></li>
-            <li><a href="#">Sign in</a></li>
+            <li class="nav-list__item"><a href="#">Log in</a></li>
+            <li class="nav-list__item"><a href="#">Sign in</a></li>
         </ul>
         <a href="#" class="logo">URLAUBSGLÜCK</a>
     </nav>
     <h2>Share your<br>holiday dreams</h2>
     <p>And find the perfect partner to fullfill it</p>
-    <a class="go-link" href="#">Find your holiday partner</a>
+    <a class="go-link" href="#partners">Find your holiday partner</a>
 </header>
 <main>
     <section class="content-page">
-        <h2>Meet a partner for your best holiday</h2>
+        <h2 id="partners">Meet a partner for your best holiday</h2>
         <ul class="partner-list">
             <li class="partner-card">
                 <picture><img src="./img/fotos/bradley-hunter.jpg" alt="Bradley Hunter"></picture>
                 <h3 class="partner-name">Bradley Hunter</h3>
-                <p class="partner descr">Based in Chicago. I love playing tennis and loud music.</p>
+                <p class="partner-descr">Based in Chicago. I love playing tennis and loud music.</p>
             </li>
             <li class="partner-card">
                 <picture><img src="./img/fotos/lucas-marsha.jpg" alt="Lucas Marsha"></picture>
                 <h3 class="partner-name">Lucas Marsha</h3>
-                <p class="partner descr">I get my inspiration from nature and objects around me. I have a passion to
+                <p class="partner-descr">I get my inspiration from nature and objects around me. I have a passion to
                     colours, typography and skateboards.</p>
             </li>
             <li class="partner-card">
                 <picture><img src="./img/fotos/heather-walker.jpg" alt="Heather Walker"></picture>
                 <h3 class="partner-name">Heather Walker</h3>
-                <p class="partner descr">I'm a happy person that loves cats and climbing on mountains.</p>
+                <p class="partner-descr">I'm a happy person that loves cats and climbing on mountains.</p>
             </li>
             <li class="partner-card">
                 <picture><img src="./img/fotos/bradley-hunter-female.jpg" alt="Bradley Hunter"></picture>
                 <h3 class="partner-name">Bradley Hunter</h3>
-                <p class="partner descr">Based in Chicago. I love playing tennis and loud music.</p>
+                <p class="partner-descr">Based in Chicago. I love playing tennis and loud music.</p>
             </li>
         </ul>
-        <a href="#" class="see-more">See other partners</a>
+        <a href="#partners" class="see-more">See other partners</a>
     </section>
 </main>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
