--- a/add-pattern/add-tasks/index.html
+++ b/add-pattern/add-tasks/index.html
@@ -37,45 +37,15 @@
 </header>
 <h1 class="visually-hidden">add tasks module 6</h1>
 <main>
-    <header>
-        <ul class="banner__list">
-            <li class="banner__item">
-                <div class="banner"><img src="#" alt="bunner">
-                    <p>Lorem ipsum dolor.</p>
-                </div>
-            </li>
-            <li class="banner__item">
-                <div class="banner"><img src="#" alt="bunner">
-                    <p>Lorem ipsum dolor.</p>
-                </div>
-            </li>
-            <li class="banner__item">
-                <div class="banner"><img src="#" alt="bunner">
-                    <p>Lorem ipsum dolor.</p>
-                </div>
-            </li>
-            <li class="banner__item">
-                <div class="banner"><img src="#" alt="bunner">
-                    <p>Lorem ipsum dolor.</p>
-                </div>
-            </li>
-            <li class="banner__item">
-                <div class="banner"><img src="#" alt="bunner">
-                    <p>Lorem ipsum dolor.</p>
-                </div>
-            </li>
-            <li class="banner__item">
-                <div class="banner"><img src="#" alt="bunner">
-                    <p>Lorem ipsum dolor.</p>
-                </div>
-            </li>
-            <li class="banner__item">
-                <div class="banner"><img src="#" alt="bunner">
-                    <p>Lorem ipsum dolor.</p>
-                </div>
-            </li>
-        </ul>
-    </header>
+    <section class="wrapper-task1">
+        <h2 class="visually-hidden">Task 1</h2>
+    </section>
+    <section class="wrapper-task2">
+        <h2 class="visually-hidden">Task 2</h2>
+    </section>
+    <section class="wrapper-task3">
+        <h2 class="visually-hidden">Task 3</h2>
+    </section>
 </main>
 <a href="../../../index.html" class="back-button">LT</a>
 <a href="https://codepen.io/LTars/pen/" class="cpen-button">Pen</a>
