--- a/html-css/module-9/index.html
+++ b/html-css/module-9/index.html
@@ -8,87 +8,91 @@
     <link rel="stylesheet" href="./css/bootstrap-grid.css">
     <link rel="stylesheet" href="./css/bootstrap-reboot.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-<header class="container">
-    <nav class="row">
-        <div class="col"><a href="#">Log in</a></div>
-        <div class="col"><a href="#">Sign in</a></div>
-        <div class="col-12"><a href="#" class="logo">URLAUBSGLÜCK</a></div>
+<header>
+    <h1 class="visually-hidden">Home page</h1>
+    <nav class="nav-bar">
+        <ul class="nav-list">
+            <li class="nav-list__item"><a href="#">Log in</a></li>
+            <li class="nav-list__item"><a href="#">Sign in</a></li>
+        </ul>
+        <a href="#" class="logo">URLAUBSGLÜCK</a>
     </nav>
-    <div class="row">
-        <div class="col-12"><h2>Share your</h2></div>
-        <div class="col-12"><h2>holiday dreams</h2></div>
-        <div class="col-12"><p>And find the perfect partner to fullfill it</p></div>
-        <div class="col-12"><a class="go-link" href="#">Find your holiday partner</a></div>
-    </div>
+    <h2>Share your<br>holiday dreams</h2>
+    <p>And find the perfect partner to fullfill it</p>
+    <a class="go-link" href="#partners">Find your holiday partner</a>
 </header>
-<main class="container">
-    <section class="row content-page">
-        <div class="col-12">
-            <h2>Meet a partner for your best holiday</h2>
-        </div>
-        <div class="col partner-list">
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-3 partner-card">
-                    <div class="row">
-                        <div class="col">
-                            <picture><img src="./img/fotos/bradley-hunter.jpg" alt="Bradley Hunter"></picture>
-                        </div>
-                        <div class="col-12">
-                            <h3 class="partner-name">Bradley Hunter</h3>
-                        </div>
-                        <div class="col-12">
-                            <p class="partner-descr">Based in Chicago. I love playing tennis and loud music.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-3 partner-card">
-                    <div class="row">
-                        <div class="col">
-                            <picture><img src="./img/fotos/lucas-marsha.jpg" alt="Lucas Marsha"></picture>
-                        </div>
-                        <div class="col-12">
-                            <h3 class="partner-name">Lucas Marsha</h3>
-                        </div>
-                        <div class="col-12">
-                            <p class="partner-descr">I get my inspiration from nature and objects around me. I have a
-                                passion to colours, typography and skateboards.
-                            </p>
+<main>
+    <section class="container content-page">
+        <div class="row justify-content-center no-gutters">
+            <div class="col-12">
+                <h2>Meet a partner for your best holiday</h2>
+            </div>
+            <div class="col-12 col-md-8 col-lg-12 partner-list">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3 partner-card">
+                        <div class="row justify-content-center">
+                            <div class="col">
+                                <picture><img src="./img/fotos/bradley-hunter.jpg" alt="Bradley Hunter"></picture>
+                            </div>
+                            <div class="col-12">
+                                <h3 class="partner-name">Bradley Hunter</h3>
+                            </div>
+                            <div class="col-12">
+                                <p class="partner-descr">Based in Chicago. I love playing tennis and loud music.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-3 partner-card">
-                    <div class="row">
-                        <div class="col">
-                            <picture><img src="./img/fotos/heather-walker.jpg" alt="Heather Walker"></picture>
-                        </div>
-                        <div class="col-12">
-                            <h3 class="partner-name">Heather Walker</h3>
-                        </div>
-                        <div class="col-12">
-                            <p class="partner-descr">I'm a happy person that loves cats and climbing on mountains.
-                            </p>
+                    <div class="col-12 col-md-6 col-lg-3 order-md-2 partner-card">
+                        <div class="row justify-content-center">
+                            <div class="col">
+                                <picture><img src="./img/fotos/lucas-marsha.jpg" alt="Lucas Marsha"></picture>
+                            </div>
+                            <div class="col-12">
+                                <h3 class="partner-name">Lucas Marsha</h3>
+                            </div>
+                            <div class="col-12">
+                                <p class="partner-descr">I get my inspiration from nature and objects around me. I have
+                                    a passion to colours, typography and skateboards.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-3 partner-card">
-                    <div class="row">
-                        <div class="col">
-                            <picture><img src="./img/fotos/bradley-hunter-female.jpg" alt="Bradley Hunter"></picture>
+                    <div class="col-12 col-md-6 col-lg-3 order-md-1 partner-card">
+                        <div class="row justify-content-center">
+                            <div class="col">
+                                <picture><img src="./img/fotos/heather-walker.jpg" alt="Heather Walker"></picture>
+                            </div>
+                            <div class="col-12">
+                                <h3 class="partner-name">Heather Walker</h3>
+                            </div>
+                            <div class="col-12">
+                                <p class="partner-descr">I'm a happy person that loves cats and climbing on mountains.
+                                </p>
+                            </div>
                         </div>
-                        <div class="col-12">
-                            <h3 class="partner-name">Bradley Hunter</h3>
-                        </div>
-                        <div class="col-12">
-                            <p class="partner-descr">Based in Chicago. I love playing tennis and loud music.</p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 order-md-3 partner-card">
+                        <div class="row justify-content-center">
+                            <div class="col">
+                                <picture><img src="./img/fotos/bradley-hunter-female.jpg" alt="Bradley Hunter">
+                                </picture>
+                            </div>
+                            <div class="col-12">
+                                <h3 class="partner-name">Bradley Hunter</h3>
+                            </div>
+                            <div class="col-12">
+                                <p class="partner-descr">Based in Chicago. I love playing tennis and loud music.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-12"><a href="" class="see-more">See other partners</a></div>
         </div>
-        <div class="col-12"><a href="" class="see-more">See other partners</a></div>
     </section>
 </main>
 </body>
