--- a/html-css/module-10/add-tasks/index.html
+++ b/html-css/module-10/add-tasks/index.html
@@ -39,16 +39,32 @@
 <main>
     <section class="wrapper-task1">
         <h2 class="visually-hidden">Task 1</h2>
+        <picture>
+            <source srcset="https://placeimg.com/400/200/nature, https://placeimg.com/800/400/nature, 2x">
+            <img src="https://placeimg.com/400/200/nature" srcset="https://placeimg.com/800/400/nature 2x"
+                 alt="some nature pic" width="400" height="200">
+        </picture>
     </section>
     <section class="wrapper-task2">
         <h2 class="visually-hidden">Task 2</h2>
+        <div class="retina-back"></div>
     </section>
     <section class="wrapper-task3">
         <h2 class="visually-hidden">Task 3</h2>
+        <header class="header">
+            <h3 class="header__title">
+                <a href="">logo</a></h3>
+            <nav class="header__nav">
+                <a href="" class="header__nav-item">link 1</a>
+                <a href="" class="header__nav-item">link 2</a>
+                <a href="" class="header__nav-item">link 3</a>
+                <a href="" class="header__nav-item">link 4</a>
+            </nav>
+        </header>
     </section>
 </main>
 <a href="../../../index.html" class="back-button">LT</a>
-<a href="https://codepen.io/LTars/pen/" class="cpen-button">Pen</a>
+<a href="https://codepen.io/LTars/pen/rvzagg" class="cpen-button">Pen</a>
 </body>
 </html>
 
