--- a/html-css/module-10/add-tasks/index.html
+++ b/html-css/module-10/add-tasks/index.html
@@ -40,8 +40,8 @@
     <section class="wrapper-task1">
         <h2 class="visually-hidden">Task 1</h2>
         <picture>
-            <source srcset="https://placeimg.com/400/200/nature, https://placeimg.com/800/400/nature, 2x">
-            <img src="https://placeimg.com/400/200/nature" srcset="https://placeimg.com/800/400/nature 2x"
+            <source srcset="https://placeimg.com/400/200/tech, https://placeimg.com/800/400/people/sepia 2x">
+            <img src="https://placeimg.com/400/200/nature/grayscale"
                  alt="some nature pic" width="400" height="200">
         </picture>
     </section>
