--- a/html-css/module-10/add-tasks/index.html
+++ b/html-css/module-10/add-tasks/index.html
@@ -55,10 +55,10 @@
             <h3 class="header__title">
                 <a href="">logo</a></h3>
             <nav class="header__nav">
-                <a href="" class="header__nav-item">link 1</a>
-                <a href="" class="header__nav-item">link 2</a>
-                <a href="" class="header__nav-item">link 3</a>
-                <a href="" class="header__nav-item">link 4</a>
+                <a href="#" class="header__nav-item">link 1</a>
+                <a href="#" class="header__nav-item">link 2</a>
+                <a href="#" class="header__nav-item">link 3</a>
+                <a href="#" class="header__nav-item">link 4</a>
             </nav>
         </header>
     </section>
