--- a/html-css/module-10/add-tasks/index.html
+++ b/html-css/module-10/add-tasks/index.html
@@ -53,7 +53,7 @@
         <h2 class="visually-hidden">Task 3</h2>
         <header class="header">
             <h3 class="header__title">
-                <a href="">logo</a></h3>
+                <a href="" class="header__title-link">logo</a></h3>
             <nav class="header__nav">
                 <a href="#" class="header__nav-item">link 1</a>
                 <a href="#" class="header__nav-item">link 2</a>
