clearing code and typos fixes

--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -31,7 +31,7 @@
         </ul>
     </nav>
     <h1 class="greeting">
-        <p class="greeting--first-line">Creative Template</p>
+        <span class="greeting--first-line">Creative Template</span><br>
         Welcome<br>to MoGo
     </h1>
     <button class="cta btn">learn more</button>
@@ -40,7 +40,7 @@
 <main>
     <section id="service" class="features">
         <h3 class="section-title">
-            <p class="section-title--first-line">We work with</p><br>
+            <span class="section-title--first-line">We work with</span><br>
             Amazing Services
         </h3>
         <ul class="features-list list">
@@ -78,7 +78,7 @@
     </section>
     <section id="about" class="about">
         <h3 class="section-title">
-            <p class="section-title--first-line">Who we are</p><br>
+            <span class="section-title--first-line">Who we are</span><br>
             Meet our team
         </h3>
         <p class="about__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda aut eligendi
@@ -86,12 +86,12 @@
             nobis, omnis perferendis quaerat quia quibusdam voluptates! Est eveniet fuga porro quidem saepe similique,
             ut veritatis vitae.</p>
         <ul class="team-list list">
-            <li class="team-list__item member-card">
-                <div class="member-card__wrapper">
+            <li class="team-list__item team-item">
+                <div class="team-item__wrapper">
                     <img
                             src="img/photos/matthew.jpg" alt="photo of Matthew Dix" width="380" height="470"
                             srcset="img/photos/matthew@2x.jpg 2x"
-                            class="member-card__pic">
+                            class="team-item__pic">
                     <ul class="socials list">
                         <li class="socials__item">
                             <a href="#" target="_blank" rel="noreferrer" class="socials__link link">
@@ -123,15 +123,15 @@
                         </li>
                     </ul>
                 </div>
-                <p class="member-card__title">Matthew Dix</p>
-                <p class="member-card__post">Graphic Design</p>
+                <p class="team-item__title">Matthew Dix</p>
+                <p class="team-item__post">Graphic Design</p>
             </li>
-            <li class="team-list__item  member-card">
-                <div class="member-card__wrapper">
+            <li class="team-list__item  team-item">
+                <div class="team-item__wrapper">
                     <img
                             src="img/photos/cris.jpg" alt="photo of Christopher Campbell" width="380" height="470"
                             srcset="img/photos/cris@2x.jpg 2x"
-                            class="member-card__pic">
+                            class="team-item__pic">
                     <ul class="socials list">
                         <li class="socials__item">
                             <a href="#" target="_blank" rel="noreferrer" class="socials__link link">
@@ -163,15 +163,15 @@
                         </li>
                     </ul>
                 </div>
-                <p class="member-card__title">Christopher Campbell</p>
-                <p class="member-card__post">Branding/UX design</p>
+                <p class="team-item__title">Christopher Campbell</p>
+                <p class="team-item__post">Branding/UX design</p>
             </li>
-            <li class="team-list__item  member-card">
-                <div class="member-card__wrapper">
+            <li class="team-list__item  team-item">
+                <div class="team-item__wrapper">
                     <img
                             src="img/photos/michael.jpg" alt="photo of Michael Fertig" width="380" height="470"
                             srcset="img/photos/michael@2x.jpg 2x"
-                            class="member-card__pic">
+                            class="team-item__pic">
                     <ul class="socials list">
                         <li class="socials__item">
                             <a href="#" target="_blank" rel="noreferrer" class="socials__link link">
@@ -203,8 +203,8 @@
                         </li>
                     </ul>
                 </div>
-                <p class="member-card__title">Michael Fertig</p>
-                <p class="member-card__post">Developer</p>
+                <p class="team-item__title">Michael Fertig</p>
+                <p class="team-item__post">Developer</p>
             </li>
         </ul>
     </section>
@@ -215,9 +215,9 @@
 <footer class="footer">
     <p class="copy">&#169; 2016 MoGo free PSD template by <a href="#" target="_blank" rel="noreferrer"
                                                              class="copy__link link">Laaqiq</a></p>
-    <form action="#" id="contact" class="subscribe">
+    <form action="#" id="contact" class="subscribe" method="post">
         <input class="subscribe__email" type="email" name="email" placeholder="Your Email..." required>
-        <button class="subscribe__submit" type="submit">Subscribe</button>
+        <button class="subscribe__submit btn" type="submit">Subscribe</button>
     </form>
 </footer>
 </body>
