--- a/html-css/module-11/src/index.html
+++ b/html-css/module-11/src/index.html
@@ -16,7 +16,7 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="format-detection" content="telephone=no">
 
-    <title>Placeholder title</title>
+    <title>Module 11</title>
     <link rel="stylesheet" href="css/styles.min.css">
     <!--<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:400,400i" rel="stylesheet">-->
 </head>
