--- a/add-pattern/add-tasks/index.html
+++ b/add-pattern/add-tasks/index.html
@@ -105,6 +105,7 @@
     </section>
     <section class="wrapper-task3">
         <h2 class="visually-hidden">Task 3</h2>
+        <h2 class="visually-hidden">Task 3</h2>
     </section>
 </main>
 <a href="../../../index.html" class="back-button">LT</a>
