--- a/html-css/module-04/add-tasks/index.html
+++ b/html-css/module-04/add-tasks/index.html
@@ -13,83 +13,83 @@
 <body>
 <header>
     <nav>
-        <ul class="menu">
-            <li class="menu__item">
+        <ul class="main__menu">
+            <li class="main__menu__item">
                 <p>Module 1-2</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-01-02/index.html" class="sub-menu__link">Homework</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-01-02/index.html" class="main__sub-menu__link">Homework</a></li>
                 </ul>
             </li>
-            <li class="menu__item">
+            <li class="main__menu__item">
                 <p>Module 3</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-03/index.html" class="sub-menu__link">Homework</a></li>
-                    <a href="html-css/module-03/add-tasks/index.html" class="sub-menu__link">Add Task</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-03/index.html" class="main__sub-menu__link">Homework</a></li>
+                    <a href="../../../html-css/module-03/add-tasks/index.html" class="main__sub-menu__link">Add Task</a></li>
                 </ul>
             </li>
-            <li class="menu__item">
+            <li class="main__menu__item">
                 <p>Module 4</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-04/index.html" class="sub-menu__link">Homework</a></li>
-                    <a href="html-css/module-04/add-tasks/index.html" class="sub-menu__link">Add Task</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-04/index.html" class="main__sub-menu__link">Homework</a></li>
+                    <a href="../../../html-css/module-04/add-tasks/index.html" class="main__sub-menu__link">Add Task</a></li>
                 </ul>
             </li>
-            <li class="menu__item">
+            <li class="main__menu__item">
                 <p>Module 5</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-05/index.html" class="sub-menu__link">Homework</a></li>
-                    <a href="html-css/module-05/add-tasks/index.html" class="sub-menu__link">Add Task</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-05/index.html" class="main__sub-menu__link">Homework</a></li>
+                    <a href="../../../html-css/module-05/add-tasks/index.html" class="main__sub-menu__link">Add Task</a></li>
                 </ul>
             </li>
-            <li class="menu__item">
+            <li class="main__menu__item">
                 <p>Module 6</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-06/index.html" class="sub-menu__link">Homework</a></li>
-                    <a href="html-css/module-06/add-tasks/index.html" class="sub-menu__link">Add Task</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-06/index.html" class="main__sub-menu__link">Homework</a></li>
+                    <a href="../../../html-css/module-06/add-tasks/index.html" class="main__sub-menu__link">Add Task</a></li>
                 </ul>
             </li>
-            <li class="menu__item">
+            <li class="main__menu__item">
                 <p>Module 7</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-07/index.html" class="sub-menu__link">Homework</a></li>
-                    <a href="html-css/module-07/add-tasks/index.html" class="sub-menu__link">Add Task</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-07/index.html" class="main__sub-menu__link">Homework</a></li>
+                    <a href="../../../html-css/module-07/add-tasks/index.html" class="main__sub-menu__link">Add Task</a></li>
                 </ul>
             </li>
-            <li class="menu__item">
+            <li class="main__menu__item">
                 <p>Module 8</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-08/index.html" class="sub-menu__link">Homework</a></li>
-                    <a href="html-css/module-08/add-tasks/index.html" class="sub-menu__link">Add Task</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-08/index.html" class="main__sub-menu__link">Homework</a></li>
+                    <a href="../../../html-css/module-08/add-tasks/index.html" class="main__sub-menu__link">Add Task</a></li>
                 </ul>
             </li>
-            <li class="menu__item">
+            <li class="main__menu__item">
                 <p>Module 9</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-09/index.html" class="sub-menu__link">Homework</a></li>
-                    <a href="html-css/module-09/add-tasks/index.html" class="sub-menu__link">Add Task</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-09/index.html" class="main__sub-menu__link">Homework</a></li>
+                    <a href="../../../html-css/module-09/add-tasks/index.html" class="main__sub-menu__link">Add Task</a></li>
                 </ul>
             </li>
-            <li class="menu__item">
+            <li class="main__menu__item">
                 <p>Module 10</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-10/index.html" class="sub-menu__link">Homework</a></li>
-                    <a href="html-css/module-10/add-tasks/index.html" class="sub-menu__link">Add Task</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-10/index.html" class="main__sub-menu__link">Homework</a></li>
+                    <a href="../../../html-css/module-10/add-tasks/index.html" class="main__sub-menu__link">Add Task</a></li>
                 </ul>
             </li>
-            <li class="menu__item">
+            <li class="main__menu__item">
                 <p>Module 11</p>
-                <ul class="sub-menu">
-                    <li class="sub-menu__item">
-                        <a href="html-css/module-11/build/index.html" class="sub-menu__link">Homework</a></li>
+                <ul class="main__sub-menu">
+                    <li class="main__sub-menu__item">
+                        <a href="../../../html-css/module-11/build/index.html" class="main__sub-menu__link">Homework</a></li>
                 </ul>
             </li>
         </ul>
