fix classes typo m6, table syntax m7add

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -69,7 +69,7 @@
             <li class="member">
                 <div class="member__wrapper">
                 <img src="./img/photos/dix.jpg" alt="photo of Matthew Dix">
-                    <ul class="social-links">
+                    <ul class="socials">
                         <li><a href="#" target="_blank" rel="noreferrer">facebook</a></li>
                         <li><a href="#" target="_blank" rel="noreferrer">twitter</a></li>
                         <li><a href="#" target="_blank" rel="noreferrer">pinterest</a></li>
@@ -82,7 +82,7 @@
             <li class="member">
                 <div class="member__wrapper">
                 <img src="./img/photos/campbell.jpg" alt="photo of Christopher Campbell">
-                    <ul class="social-links">
+                    <ul class="socials">
                         <li><a href="#" target="_blank" rel="noreferrer">facebook</a></li>
                         <li><a href="#" target="_blank" rel="noreferrer">twitter</a></li>
                         <li><a href="#" target="_blank" rel="noreferrer">pinterest</a></li>
@@ -95,7 +95,7 @@
             <li class="member">
                 <div class="member__wrapper">
                 <img src="./img/photos/fertig.jpg" alt="photo of Michael Fertig">
-                    <ul class="social-links">
+                    <ul class="socials">
                         <li><a href="#" target="_blank" rel="noreferrer">facebook</a></li>
                         <li><a href="#" target="_blank" rel="noreferrer">twitter</a></li>
                         <li><a href="#" target="_blank" rel="noreferrer">pinterest</a></li>
